--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 <body>
 
     <!-- Header -->
-    <header>
+    <header class="fix-header">
         <div class="navbar font-bitter">
             <div class=" plural-head container ">
                 <img src="/images/pluralsight-company-white-logo.png" alt="">
                 <nav>
                     <ul>
-                        <li> Pluralsight</li>
-                        <li>Skills</li>
-                        <li>Flow</li>
-                        <li>Blog</li>
-                        <li>Sign in</li>
+                        <li><a class="link-bottom" href="#">Pluralsight</a></li>
+                        <li><a class="link-bottom" href="#">Skills</a></li>
+                        <li><a class="link-bottom" href="#">Flow</a></li>
+                        <li><a class="link-bottom" href="#">Blog</a></li>
+                        <li><a class="link-bottom" href="#">Sign in</a></li>
                     </ul>
                 </nav>
 
@@ -46,8 +46,8 @@
                 <div class="buttons">
                     <ul>
                         <li><i class="fa-solid fa-magnifying-glass"></i></li>
-                        <li><a class="contact-btn">Contact Sales</a></li>
-                        <li><a class="free-btn">Try for free</a></li>
+                        <li><a class="contact-btn flex">Contact Sales</a></li>
+                        <li><a class="free-btn flex">Try for free</a></li>
                     </ul>
                 </div>
             </div>
@@ -92,45 +92,42 @@
                         <div><img src="/images/aws-no-shadow.png" alt=""></div>
                         <div><img src="/images/azure-no-shadow.png" alt=""></div>
                         <div><img src="/images/angular-no-shadow.png" alt=""></div>
-
                     </div>
                 </div>
             </div>
         </div>
-
         <div class="small-cards container ">
             <div class="play-card">
-                <div class="d-flex font-bitter">
+                <div class="card-element d-flex font-bitter">
                     <img src="/images/icon-play.png" alt="">
                     <p>7,000+</p>
                 </div>
-                <h3>Expert-authored skill development courses</h3>
+                <p class="p-font">Business customers use Pluralsight Skills</p>
             </div>
 
             <div class="million-card">
-                <div class="d-flex font-bitter">
+                <div class="card-element d-flex font-bitter">
                     <img src="/images/icon-skillIQ.png" alt="">
-                    <p>7,000+</p>
+                    <p>5 million+</p>
                 </div>
-                <h3>Expert-authored skill development courses</h3>
+                <p>Business customers use Pluralsight Skills</p>
             </div>
 
             <div class="customers-card">
-                <div class="d-flex font-bitter">
+                <div class="card-element d-flex font-bitter">
                     <img src="/images/icon-certification.png" alt="">
-                    <p>7,000+</p>
+                    <p>14,000+</p>
                 </div>
-                <h3>Expert-authored skill development courses</h3>
+                <p>Business customers use Pluralsight Skills</p>
             </div>
 
             <div class="percent-card">
-                <div class="d-flex font-bitter">
+                <div class=" card-element d-flex font-bitter">
                     <img src="/images/icon-thumbs-up.png" alt="">
-                    <p>7,000+</p>
+                    <p>70%</p>
                 </div>
-                <h3>Expert-authored skill development courses</h3>
+                <p>Business customers use Pluralsight Skills</p>
             </div>
-
         </div>
     </section>
 
@@ -154,7 +151,6 @@
             <div>
                 <img src="/images/devon-somerset.png" alt="">
             </div>
-
         </div>
 
         <div class="container">
@@ -178,7 +174,6 @@
                     <img src="/images/img1-upskill-reskill.png" alt="">
                 </div>
             </div>
-
             <div class="upskill ">
                 <div>
                     <img src="/images/img2-learn.png" alt="">
@@ -192,12 +187,8 @@
                         In fact, Skills is the only upskilling platform that offers labs across
                         all technology domains. We've totally got you covered.</p>
                     <a class="pointer font-bitter">Explore labs <i class="fa-solid fa-chevron-right"></i></a>
-
                 </div>
-
             </div>
-
-
             <div class="upskill">
                 <div class="upskill-left">
                     <h1 class="font-bitter"> Assess & evaluate</h1>
@@ -215,11 +206,161 @@
                     <img src="/images/img3-skillIQ.png" alt="">
                 </div>
             </div>
-
         </div>
-
     </section>
 
+    <section class="investment ">
+        <div class=" container">
+            <div class="returns">
+                <h1 class="font-bitter">Returns worth your investment</h1>
+                <p>By prioritizing technology skill development, your technologists will grow
+                    in their careers and your business will
+                    achieve better outcomes.</p>
+                <p>According to TechValidate Survey:</p>
+            </div>
+
+            <div class="percentages">
+                <div>
+                    <img src="/images/93-percent.png" alt="">
+                    <p>93% of surveyed organizations realized a return on their
+                        investment within 6 – 12 months
+                        of implementing Pluralsight</p>
+                </div>
+
+                <div>
+                    <img src="/images/96-percent.png" alt="">
+                    <p>96% of surveyed organizations are likely to recommend Pluralsight</p>
+                </div>
+
+                <div>
+                    <img src="/images/50-percent.png" alt="">
+                    <p>Over half of surveyed organizations confirmed that Pluralsight
+                        has enabled them to save time and money</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="customers-case">
+        <div class="container">
+            <div class="customers">
+                <div class="stories">
+                    <h3 class="font-bitter">Customer stories</h3>
+                    <h2 class="font-bitter">Supporting tech teams across all industries</h2>
+                    <div>Discover how these organizations build tech skills
+                        at scale and improve engineering impact.</div>
+                    <a class="pointer font-bitter">See more customer stories <i
+                            class="fa-solid fa-chevron-right"></i></a>
+                </div>
+                <div class="fujitsu-card">
+                    <img src="/images/fujitsu.png" alt="">
+                    <div>Since adopting Pluralsight, Fujitsu has been able to demonstrate greater
+                        depth of in-house technical skills.</div>
+                    <h4 class="font-bitter">Measurable progress</h4>
+                    <div>Analytics enable leaders to track progress and report
+                        the value their teams are adding to the company's larger
+                        objectives.</div>
+                    <h4 class="font-bitter">Customer confidence</h4>
+                    <div>As team members demonstrate greater depth of technical expertise,
+                        customers know they're in good
+                        hands.</div>
+                    <a class="pointer font-bitter">Read the full story<i class="fa-solid fa-chevron-right"></i></a>
+                </div>
+                <div class="maritz-card">
+                    <img src="/images/maritz-cx.png" alt="">
+                    <div>MaritzCX organized into chapters and guilds and chose Pluralsight as
+                        their partner in skill development. Now, subject
+                        matter experts within the organization curate content relevant
+                        to their needs on a single platform</div>
+                    <h4 class="font-bitter">Improved org structure</h4>
+                    <div>Visibility into skills within the company supports chapter
+                        and guild development and alignment with key business
+                        objectives.</div>
+                    <h4 class="font-bitter">Engagement</h4>
+                    <div>Team members feel valued and encouraged to explore skills that may
+                        spark the next innovation.</div>
+                    <a class="pointer font-bitter">Read the full story<i class="fa-solid fa-chevron-right"></i></a>
+                </div>
+            </div>
+            <div class="experience">
+                <h1 class="font-bitter text-center">The Pluralsight Skills experience</h1>
+                <div class="skill-case">
+                    <div class="exp-img">
+                        <img src="/images/skills-logos.png" alt="">
+                    </div>
+                    <div class="experience-list">
+                        <ul>
+                            <li>
+                                <a class="pointer"> View skill assessments <i class="fa-solid fa-chevron-right"></i></a>
+
+                            </li>
+                            <li>
+                                <a class="pointer"> View skill assessments <i class="fa-solid fa-chevron-right"></i></a>
+
+                            </li>
+                            <li>
+                                <a class="pointer"> View skill assessments <i class="fa-solid fa-chevron-right"></i></a>
+
+                            </li>
+                            <li>
+                                <a class="pointer"> View skill assessments <i class="fa-solid fa-chevron-right"></i></a>
+
+                            </li>
+                            <li>
+                                <a class="pointer"> View skill assessments <i class="fa-solid fa-chevron-right"></i></a>
+
+                            </li>
+                            <li>
+                                <a class="pointer"> View skill assessments <i class="fa-solid fa-chevron-right"></i></a>
+
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="for-courses">
+        <div class="course-case container">
+            <h1 class="font-bitter">What you'll do</h1>
+            <div class="code-course">
+                <div class="master">
+                    <img src="/images/img-master-skills.png" alt="">
+                    <h3 class="font-bitter">Master the most in-demand skills</h3>
+                    <div>Thousands of on-demand, expert-led courses and the ability to learn at
+                        your preferred pace help you close skills gaps
+                        and keep your tech talent.</div>
+                </div>
+                <div class="master">
+                    <img src="/images/img-support-efforts.png" alt="">
+                    <h3 class="font-bitter">Support your team's upskilling efforts</h3>
+                    <div>Thousands of on-demand, expert-led courses and the ability to learn at
+                        your preferred pace help you close skills gaps
+                        and keep your tech talent.</div>
+                </div>
+                <div class="master">
+                    <img src="/images/img-practice.png" alt="">
+                    <h3 class="font-bitter">Put new skills into (risk-free) practice</h3>
+                    <div>Thousands of on-demand, expert-led courses and the ability to learn at
+                        your preferred pace help you close skills gaps
+                        and keep your tech talent.</div>
+                </div>
+            </div>
+            <div class="free-courses">
+                <h1 class="font-bitter">Try for free</h1>
+                <a class="pointer font-bitter">
+                    View free courses
+                </a>
+            </div>
+        </div>
+
+        <div>
+            
+        </div>
+    </section>
 </body>
 
 </html>
