--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                         workforce—one developer, one delivery, one success at a time.</p>
                     <a class="pointer font-bitter">Learn more </a>
                 </div>
-                <div class="coll-solutions">
+                <div class="solution">
                     <div class="col-btn pointer">
                         <button type="button" class="collapsible font-bitter">Cloud transformation</button>
                         <i class="fa-solid fa-chevron-down"></i>
@@ -501,6 +501,54 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="plans-pricing">
+        <div class="plans container  ">
+            <div class="text-center">
+                <img src="/images/logo_ps-skills.png" alt="">
+                <h1 class="font-bitter">Plans & pricing</h1>
+                <div class="indiviual-team flex-between font-bitter">
+                    <p>Individual</p>
+                    <p>Team</p>
+                </div>
+            </div>
+
+            <div class="plans-cards">
+                <div class="starter">
+                    <h1 class="font-bitter">Starter</h1>
+                    <p class="font-bitter price">399 $</p>
+                    <div>per user / year</div>
+                    <div class="font-bitter ">Upskill your team with our core library.</div>
+                    <button class="pointer">Get started</button>
+                </div>
+
+                <div class="professional">
+                    <h1 class="font-bitter">Professional</h1>
+                    <p class="font-bitter price">579 $</p>
+                    <div>per user / year</div>
+                    <div class="font-bitter">Basic reporting and user
+                        analytics for teams.</div>
+                    <button class="pointer">Get started</button>
+                </div>
+
+                <div class="enterprise">
+                    <h1 class="font-bitter">Enterprise</h1>
+                    <p class="font-bitter price">779 $</p>
+                    <div>per user / year</div>
+                    <div class="font-bitter">Flexibility and advanced analytics for the enterprise.</div>
+                    <button class="pointer">Contact sales</button>
+                </div>
+
+            </div>
+            <div class="text-center ">
+                <p>*All per-user products require an annual contract.</p>
+                <a class="pointer font-bitter">Compare plans </a>
+            </div>
+
+
+
         </div>
     </section>
 
