--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="plural-head container ">
                 <img src="/images/pluralsight-company-white-logo.png" alt="">
                 <nav>
-                    <ul>
+                    <ul class="inline-flex">
                         <li><a class="link-bottom" href="#">Pluralsight</a></li>
                         <li><a class="link-bottom" href="#">Skills</a></li>
                         <li><a class="link-bottom" href="#">Flow</a></li>
@@ -35,7 +35,7 @@
             <div class="skills-head container">
                 <div class="list">
                     <img src="/images/Pluralsight-Product-Logo-Skills-Color-OnDark.webp" alt="">
-                    <ul>
+                    <ul class="inline-flex">
                         <li>Why Skills?</li>
                         <li>Courses</li>
                         <li>View plans</li>
@@ -43,7 +43,7 @@
                     </ul>
                 </div>
                 <div class="buttons">
-                    <ul>
+                    <ul class="inline-flex">
                         <li><i class="fa-solid fa-magnifying-glass"></i></li>
                         <li><a class="contact-btn flex">Contact Sales</a></li>
                         <li><a class="free-btn flex">Try for free</a></li>
@@ -53,7 +53,7 @@
         </div>
     </header>
 
-    <section class="where-teams  ">
+    <section class="where-teams">
         <div class="card container font-bitter">
             <div class="card-text ">
                 <h4>Pluralsight Skills</h4>
@@ -72,25 +72,22 @@
                 <img src="/images/hero.png" alt="">
             </div>
         </div>
-
-        <div class=" ">
-            <div class="popular container font-bitter">
-                <div class="topics">
-                    <h2>Popular topics to learn now</h2>
-                    <a>View all technologies <i class="fa-solid fa-chevron-right"></i></a>
-                </div>
-                <div class="languages pointer">
-                    <div class="languages-div">
-                        <div><img src="/images/r-no-shadow.png" alt=""></div>
-                        <div><img src="/images/python-no-shadow.png" alt=""></div>
-                        <div><img src="/images/react-no-shadow.png" alt=""></div>
-                        <div><img src="/images/java-no-shadow.png" alt=""></div>
-                        <div><img src="/images/c-sharp-no-shadow.png" alt=""></div>
-                        <div><img src="/images/ruby-no-shadow.png" alt=""></div>
-                        <div><img src="/images/aws-no-shadow.png" alt=""></div>
-                        <div><img src="/images/azure-no-shadow.png" alt=""></div>
-                        <div><img src="/images/angular-no-shadow.png" alt=""></div>
-                    </div>
+        <div class="popular container font-bitter">
+            <div class="topics">
+                <h2>Popular topics to learn now</h2>
+                <a>View all technologies <i class="fa-solid fa-chevron-right"></i></a>
+            </div>
+            <div class="languages pointer ">
+                <div class="languages-div d-flex">
+                    <div><img src="/images/r-no-shadow.png" alt=""></div>
+                    <div><img src="/images/python-no-shadow.png" alt=""></div>
+                    <div><img src="/images/react-no-shadow.png" alt=""></div>
+                    <div><img src="/images/java-no-shadow.png" alt=""></div>
+                    <div><img src="/images/c-sharp-no-shadow.png" alt=""></div>
+                    <div><img src="/images/ruby-no-shadow.png" alt=""></div>
+                    <div><img src="/images/aws-no-shadow.png" alt=""></div>
+                    <div><img src="/images/azure-no-shadow.png" alt=""></div>
+                    <div><img src="/images/angular-no-shadow.png" alt=""></div>
                 </div>
             </div>
         </div>
@@ -129,12 +126,12 @@
         </div>
     </section>
 
-    <section class="section-brands container ">
+    <section class="section-brands container">
         <div>
-            <h3>Trusted by teams at fast-growing startups and big-name brands </h3>
+            <h3 class="text-center">Trusted by teams at fast-growing startups and big-name brands </h3>
         </div>
         <div class="row">
-            <div class="brands ">
+            <div class="brands text-center">
                 <div>
                     <img src="/images/bluecore.png" alt="">
                 </div>
@@ -164,7 +161,7 @@
                         skills they need to progress
                         from novice to guru across a variety of tech skills.</p>
 
-                    <div class="upskill-btn">
+                    <div class="upskill-btn d-flex">
                         <button class="free-btn">Browse courses</button>
                         <button class="learn-btn">Learning paths</button>
                     </div>
@@ -208,7 +205,7 @@
         </div>
     </section>
 
-    <section class="investment ">
+    <section class="investment text-center">
         <div class=" container">
             <div class="returns">
                 <h1 class="font-bitter">Returns worth your investment</h1>
@@ -218,7 +215,7 @@
                 <p>According to TechValidate Survey:</p>
             </div>
 
-            <div class="percentages">
+            <div class="percentages text-center">
                 <div>
                     <img src="/images/93-percent.png" alt="">
                     <p>93% of surveyed organizations realized a return on their
@@ -290,26 +287,32 @@
                     <div class="experience-list">
                         <ul>
                             <li>
-                                <a class="pointer"> View skill assessments <i class="fa-solid fa-chevron-right"></i></a>
+                                <a class="pointer flex-between"> View skill assessments <i
+                                        class="fa-solid fa-chevron-right"></i></a>
 
                             </li>
                             <li>
-                                <a class="pointer">Certification prep <i class="fa-solid fa-chevron-right"></i></a>
+                                <a class="pointer flex-between">Certification prep <i
+                                        class="fa-solid fa-chevron-right"></i></a>
 
                             </li>
                             <li>
-                                <a class="pointer"> Skill assessments <i class="fa-solid fa-chevron-right"></i></a>
+                                <a class="pointer flex-between"> Skill assessments <i
+                                        class="fa-solid fa-chevron-right"></i></a>
                             </li>
                             <li>
-                                <a class="pointer"> Learning paths <i class="fa-solid fa-chevron-right"></i></a>
+                                <a class="pointer flex-between"> Learning paths <i
+                                        class="fa-solid fa-chevron-right"></i></a>
 
                             </li>
                             <li>
-                                <a class="pointer"> Hands-on Labs <i class="fa-solid fa-chevron-right"></i></a>
+                                <a class="pointer flex-between"> Hands-on Labs <i
+                                        class="fa-solid fa-chevron-right"></i></a>
 
                             </li>
                             <li>
-                                <a class="pointer"> Instructor-led classes <i class="fa-solid fa-chevron-right"></i></a>
+                                <a class="pointer flex-between"> Instructor-led classes <i
+                                        class="fa-solid fa-chevron-right"></i></a>
 
                             </li>
                         </ul>
@@ -347,7 +350,7 @@
                         and keep your tech talent.</div>
                 </div>
             </div>
-            <div class="free-courses">
+            <div class="free-courses space-flex">
                 <h1 class="font-bitter">Try for free</h1>
                 <a class="pointer font-bitter">View free courses </a>
             </div>
@@ -371,7 +374,7 @@
                     <i class="fa-regular fa-clock"></i>1h 28m
                     <i class="fa-solid fa-chart-simple"></i> Beginner
                 </div>
-                <span class="pointer font-bitter">View course</span>
+                <span class="pointer font-bitter ">View course</span>
             </div>
             <div class="purple-card">
                 <img src="/images/purple-card-logo.png" alt="">
@@ -518,37 +521,36 @@
             <div class="plans-cards">
                 <div class="starter">
                     <h1 class="font-bitter">Starter</h1>
-                    <p class="font-bitter price">399 $</p>
+                    <div class="font-bitter price">399 $</div>
                     <div>per user / year</div>
                     <div class="font-bitter ">Upskill your team with our core library.</div>
                     <button class="pointer">Get started</button>
+
                 </div>
 
                 <div class="professional">
                     <h1 class="font-bitter">Professional</h1>
-                    <p class="font-bitter price">579 $</p>
+                    <div class="font-bitter price">579 $</div>
                     <div>per user / year</div>
                     <div class="font-bitter">Basic reporting and user
                         analytics for teams.</div>
                     <button class="pointer">Get started</button>
+                    <div>or start a <a>TEAM trial</a></div>
                 </div>
 
                 <div class="enterprise">
                     <h1 class="font-bitter">Enterprise</h1>
-                    <p class="font-bitter price">779 $</p>
+                    <div class="font-bitter price">779 $</div>
                     <div>per user / year</div>
                     <div class="font-bitter">Flexibility and advanced analytics for the enterprise.</div>
                     <button class="pointer">Contact sales</button>
+                    <div>or start a <a>pilot</a></div>
                 </div>
-
             </div>
             <div class="text-center ">
                 <p>*All per-user products require an annual contract.</p>
                 <a class="pointer font-bitter">Compare plans </a>
             </div>
-
-
-
         </div>
     </section>
 
