--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <a>View all technologies <i class="fa-solid fa-chevron-right"></i></a>
             </div>
             <div class="languages pointer ">
-                <div class="languages-div d-flex">
+                <div class="languages-div ">
                     <div><img src="/images/r-no-shadow.png" alt=""></div>
                     <div><img src="/images/python-no-shadow.png" alt=""></div>
                     <div><img src="/images/react-no-shadow.png" alt=""></div>
