--- a/index.html
+++ b/index.html
@@ -77,58 +77,62 @@
                 <h2>Popular topics to learn now</h2>
                 <a>View all technologies <i class="fa-solid fa-chevron-right"></i></a>
             </div>
-            <div class="languages pointer ">
-                <div class="languages-div ">
-                    <div><img src="/images/r-no-shadow.png" alt=""></div>
-                    <div><img src="/images/python-no-shadow.png" alt=""></div>
-                    <div><img src="/images/react-no-shadow.png" alt=""></div>
-                    <div><img src="/images/java-no-shadow.png" alt=""></div>
-                    <div><img src="/images/c-sharp-no-shadow.png" alt=""></div>
-                    <div><img src="/images/ruby-no-shadow.png" alt=""></div>
-                    <div><img src="/images/aws-no-shadow.png" alt=""></div>
-                    <div><img src="/images/azure-no-shadow.png" alt=""></div>
-                    <div><img src="/images/angular-no-shadow.png" alt=""></div>
+            <div class="languages  ">
+                <div class="languages-logo ">
+                    <ul class="d-flex">
+                        <li><a href="#">
+                                <img src="/images/r-no-shadow.png" alt="">
+                            </a> </li>
+                        <li><a href="#"> <img src="/images/python-no-shadow.png" alt=""></a> </li>
+                        <li><a href="#"><img src="/images/react-no-shadow.png" alt=""></a> </li>
+                        <li><a href="#"><img src="/images/java-no-shadow.png" alt=""></a> </li>
+                        <li><a href="#"><img src="/images/c-sharp-no-shadow.png" alt=""></a> </li>
+                        <li><a href="#"><img src="/images/ruby-no-shadow.png" alt=""></a> </li>
+                        <li><a href="#"><img src="/images/aws-no-shadow.png" alt=""></a> </li>
+                        <li> <a href="#"><img src="/images/azure-no-shadow.png" alt=""></a></li>
+                        <li> <a href="#"><img src="/images/angular-no-shadow.png" alt=""></a></li>
+                    </ul>
                 </div>
             </div>
         </div>
         <div class="small-cards container ">
             <div class="play-card">
-                <div class="card-element d-flex font-bitter">
+                <div class="card-element  font-bitter">
                     <img src="/images/icon-play.png" alt="">
-                    <p>7,000+</p>
+                    <h1>7,000+</h1>
                 </div>
-                <p class="p-font">Business customers use Pluralsight Skills</p>
+                <div class="p-font">Business customers use Pluralsight Skills</div>
             </div>
 
             <div class="million-card">
-                <div class="card-element d-flex font-bitter">
+                <div class="card-element  font-bitter">
                     <img src="/images/icon-skillIQ.png" alt="">
-                    <p>5 million+</p>
+                    <h1>5 million+</h1>
                 </div>
-                <p>Business customers use Pluralsight Skills</p>
+                <div>Business customers use Pluralsight Skills</div>
             </div>
 
             <div class="customers-card">
-                <div class="card-element d-flex font-bitter">
+                <div class="card-element  font-bitter">
                     <img src="/images/icon-certification.png" alt="">
-                    <p>14,000+</p>
+                    <h1>14,000+</h1>
                 </div>
-                <p>Business customers use Pluralsight Skills</p>
+                <div>Business customers use Pluralsight Skills</div>
             </div>
 
             <div class="percent-card">
-                <div class=" card-element d-flex font-bitter">
+                <div class=" card-element  font-bitter">
                     <img src="/images/icon-thumbs-up.png" alt="">
-                    <p>70%</p>
+                    <h1>70%</h1>
                 </div>
-                <p>Business customers use Pluralsight Skills</p>
+                <div>Business customers use Pluralsight Skills</div>
             </div>
         </div>
     </section>
 
     <section class="section-brands container">
         <div>
-            <h3 class="text-center">Trusted by teams at fast-growing startups and big-name brands </h3>
+            <h3 class="text-center font-bitter">Trusted by teams at fast-growing startups and big-name brands </h3>
         </div>
         <div class="row">
             <div class="brands text-center">
@@ -350,7 +354,7 @@
                         and keep your tech talent.</div>
                 </div>
             </div>
-            <div class="free-courses space-flex">
+            <div class="free-courses">
                 <h1 class="font-bitter">Try for free</h1>
                 <a class="pointer font-bitter">View free courses </a>
             </div>
